# mempalace

./: .gitignore  Cargo.toml
mempalace/: entity_detector.py  layers.py  miner.py  normalize.py  onboarding.py  split_mega_files.py
src/: config.rs  convo_miner.rs  dialect.rs  entity_detector.rs  entity_registry.rs  error.rs  general_extractor.rs  knowledge_graph.rs  layers.rs  lib.rs  main.rs  mcp_server.rs  miner.rs  normalize.rs  onboarding.rs  palace_graph.rs  room_detector.rs  searcher.rs  spellcheck.rs  split_mega_files.rs  store.rs
tests/: integration_mcp.rs  integration_pipeline.rs
