[package]
name = "mempalace"
version = "3.0.0"
edition = "2021"
description = "Give your AI a memory — mine projects and conversations into a searchable palace. No API key required."
license = "MIT"
readme = "README.md"
keywords = ["ai", "memory", "llm", "rag", "mcp"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "mempalace"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
md-5 = "0.10"
dirs = "5"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
